--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="page-header-container header">
-        <div class="container">
+        <div class="container" style='display:flex;'>
             <nav class="page-nav">
                 <a href="" class=" studio link page-header"><span class="web">Web</span>studio</a>
                 <ul class=" header-list list ">
